<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jboss.datavirtualization</groupId>
    <artifactId>datavirt</artifactId>
    <packaging>war</packaging>
    <version>1.0</version>
    <name>DataVirt-gwt</name>
    <description>DataVirtualization Web App</description>

    <properties>
        <!-- GWT -->
        <gwt.version>2.5.1</gwt.version>
        <gwt.style>OBF</gwt.style>

        <!-- Maven -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    </properties>

    <build>
        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <!-- Skips the GWTTestCases during Junit Testing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*GwtTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- GWT -->
            <!-- 'mvn gwt:run' -->
            <!-- 'mvn gwt:debug' -->
            <!-- 'mvn gwt:compile' -->
            <!-- 'mvn gwt:test' or 'mvn integration-test' -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.version}</version>
                <configuration>
                    <strict>true</strict>

                    <testTimeOut>180</testTimeOut>
                    <mode>htmlunit</mode>
                    <!-- Switch to a suite to run tests faster -->
                    <!-- <includes>**/*GwtTestSuite.java</includes> -->
                    <!-- <excludes>**/*GwtTest.java</excludes> -->
                    <includes>**/*GwtTest.java</includes>

                    <extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
                    <logLevel>INFO</logLevel>
                    <style>${gwt.style}</style>

                    <copyWebapp>true</copyWebapp>
                    <hostedWebapp>${webappDirectory}</hostedWebapp>

                    <runTarget>DataVirt.html</runTarget>
                    <module>org.jboss.datavirtualization.DataVirt</module>
                    <i18nMessagesBundle>org.jboss.datavirtualization.client.Messages</i18nMessagesBundle>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                            <goal>i18n</goal>
                            <goal>generateAsync</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
          <plugins>
            <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
            <plugin>
              <groupId>org.eclipse.m2e</groupId>
              <artifactId>lifecycle-mapping</artifactId>
              <version>1.0.0</version>
              <configuration>
                <lifecycleMappingMetadata>
                  <pluginExecutions>
                    <pluginExecution>
                      <pluginExecutionFilter>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>gwt-maven-plugin</artifactId>
                        <versionRange>[2.5.1,)</versionRange>
                        <goals>
                          <goal>i18n</goal>
                        </goals>
                      </pluginExecutionFilter>
                      <action>
                        <ignore></ignore>
                      </action>
                    </pluginExecution>
                  </pluginExecutions>
                </lifecycleMappingMetadata>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!-- GWT -->
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.2</version>
        </dependency>

	<!-- JBoss and Teiid -->
        <dependency>
  	  <groupId>org.jboss</groupId>
  	  <artifactId>jboss-dmr</artifactId>
  	  <version>1.1.6.Final-redhat-1</version>
  	</dependency>
  	<dependency>
  	  <groupId>org.jboss.as</groupId>
  	  <artifactId>jboss-as-cli</artifactId>
  	  <version>7.2.0.Final-redhat-8</version>
  	</dependency>
  	<dependency>
          <groupId>org.jboss.as</groupId>
  	  <artifactId>jboss-as-controller-client</artifactId>
  	  <version>7.2.0.Final-redhat-8</version>
  	</dependency>
	<dependency>
	  <groupId>org.jboss.teiid</groupId>
	  <artifactId>teiid-common-core</artifactId>
          <version>8.4.1</version>
	</dependency>
	<dependency>
	  <groupId>org.jboss.teiid</groupId>
	  <artifactId>teiid-client</artifactId>
          <version>8.4.1</version>
	</dependency>
        <dependency>
          <groupId>org.jboss.teiid</groupId>
          <artifactId>teiid-admin</artifactId>
          <version>8.4.1</version>
        </dependency>  
    </dependencies>
</project>
